force-app/main/default/objects/Contact/fields/Funktion_AT__c.field-meta.xml
<CustomField>
    <fullName>Funktion_AT__c</fullName>
    <label>Funktion AT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ärztlicher Direktor</fullName>
            </value>
            <value>
                <fullName>Direktor</fullName>
            </value>
            <value>
                <fullName>Verwaltungsleitung</fullName>
            </value>
            <value>
                <fullName>Abteilungsvorstand</fullName>
            </value>
            <value>
                <fullName>Verwaltung</fullName>
            </value>
            <value>
                <fullName>Schwester</fullName>
            </value>
            <value>
                <fullName>Pfleger</fullName>
            </value>
            <value>
                <fullName>Lt. Steri-Schwester</fullName>
            </value>
            <value>
                <fullName>Oberarzt</fullName>
            </value>
            <value>
                <fullName>Arzt</fullName>
            </value>
            <value>
                <fullName>Primarius</fullName>
            </value>
            <value>
                <fullName>Leitender Arzt</fullName>
            </value>
            <value>
                <fullName>Assistenzarzt</fullName>
            </value>
            <value>
                <fullName>Einkauf</fullName>
            </value>
            <value>
                <fullName>Einkaufsleitung</fullName>
            </value>
            <value>
                <fullName>OP-Leitung</fullName>
            </value>
            <value>
                <fullName>Stv. OP-Leitung</fullName>
            </value>
            <value>
                <fullName>OP Schwester</fullName>
            </value>
            <value>
                <fullName>OP Pfleger</fullName>
            </value>
            <value>
                <fullName>Technische Leitung</fullName>
            </value>
            <value>
                <fullName>Inhaber</fullName>
            </value>
            <value>
                <fullName>Belegarzt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>