force-app/main/default/objects/Contact/fields/GDPR_Consent_Data_Processing_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Data_Processing_TimeStamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDPR_Consent Data Processing TimeStamp</label>
    <type>DateTime</type>
</CustomField>