force-app/main/default/objects/Contact/fields/GDPR_Consent_Email_Double_Source__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Email_Double_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDPR_Consent Email Double Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>