force-app/main/default/objects/Contact/fields/GDPR_Consent_Opt_in_Detail__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Opt_in_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDPR_Consent Opt-in Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>