force-app/main/default/objects/Contact/fields/GDPR_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Status__c</fullName>
    <label>GDPR_Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant - Opt-in Confirmed</fullName>
            </value>
            <value>
                <fullName>Pending Opt-in Confirmation</fullName>
            </value>
            <value>
                <fullName>Non-compliant - Consent Not Obtained</fullName>
            </value>
            <value>
                <fullName>No Consent Required</fullName>
            </value>
            <value>
                <fullName>Verbal Consent Given - Pending Opt-In Confirmation</fullName>
            </value>
            <value>
                <fullName>Unsubscribed - Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>