force-app/main/default/objects/Contact/fields/General_Information__c.field-meta.xml
<CustomField>
    <fullName>General_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer letter, Timeline, Placing orders</inlineHelpText>
    <label>General Information</label>
    <type>Checkbox</type>
</CustomField>