force-app/main/default/objects/Contact/fields/GPL_Profile__c.field-meta.xml
<CustomField>
    <fullName>GPL_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zimmer.com Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>GPL_Profile__c.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GPL_Profile__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>