force-app/main/default/objects/Contact/fields/HasOptedOutOfLetter__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Letter</label>
    <type>Checkbox</type>
</CustomField>