force-app/main/default/objects/Contact/fields/HasOptedOutOfNewsletter__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Newsletter</label>
    <type>Checkbox</type>
</CustomField>