force-app/main/default/objects/Contact/fields/HCP_Country_Access__c.field-meta.xml
<CustomField>
    <fullName>HCP_Country_Access__c</fullName>
    <label>HCP Country Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>