force-app/main/default/objects/Contact/fields/HCP_Country_Access_Code_Contact__c.field-meta.xml
<CustomField>
    <fullName>HCP_Country_Access_Code_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HCP Country Access Code Contact</label>
    <length>15</length>
    <type>Text</type>
</CustomField>