force-app/main/default/objects/Contact/fields/HCPContactId__c.field-meta.xml
<CustomField>
    <fullName>HCPContactId__c</fullName>
    <formula>LEFT(If(Account.IsPersonAccount, AccountId,Id),15)</formula>
    <label>HCPContactId</label>
    <type>Text</type>
</CustomField>