force-app/main/default/objects/Contact/fields/Hire_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Hire_Annual_Sales__c</fullName>
    <label>Expected Annualized Revenue Gain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>