force-app/main/default/objects/Contact/fields/Hire_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Hire_Competitor__c</fullName>
    <label>Hire Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acumed</fullName>
            </value>
            <value>
                <fullName>Arthrex</fullName>
            </value>
            <value>
                <fullName>Conformis</fullName>
            </value>
            <value>
                <fullName>DePuy</fullName>
            </value>
            <value>
                <fullName>DeRoyal</fullName>
            </value>
            <value>
                <fullName>DJO/Encore</fullName>
            </value>
            <value>
                <fullName>Exactech</fullName>
            </value>
            <value>
                <fullName>Genzyme</fullName>
            </value>
            <value>
                <fullName>Mako</fullName>
            </value>
            <value>
                <fullName>Medacta</fullName>
            </value>
            <value>
                <fullName>ODC</fullName>
            </value>
            <value>
                <fullName>Omni Life</fullName>
            </value>
            <value>
                <fullName>POD (Physician Owned Distributorships)</fullName>
            </value>
            <value>
                <fullName>Sanofi</fullName>
            </value>
            <value>
                <fullName>Small Bone Innovations</fullName>
            </value>
            <value>
                <fullName>Smith &amp; Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Tornier</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>