force-app/main/default/objects/Contact/fields/Hire_date_2__c.field-meta.xml
<CustomField>
    <fullName>Hire_date_2__c</fullName>
    <formula>Hire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hire Month</label>
    <type>Date</type>
</CustomField>