force-app/main/default/objects/Contact/fields/Hire_day__c.field-meta.xml
<CustomField>
    <fullName>Hire_day__c</fullName>
    <formula>Hire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hire day</label>
    <type>Date</type>
</CustomField>