force-app/main/default/objects/Contact/fields/Home_City__c.field-meta.xml
<CustomField>
    <fullName>Home_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privat Stadt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>