force-app/main/default/objects/Contact/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privat Land</label>
    <length>100</length>
    <type>Text</type>
</CustomField>