force-app/main/default/objects/Contact/fields/Home_Fax__c.field-meta.xml
<CustomField>
    <fullName>Home_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Fax</label>
    <type>Phone</type>
</CustomField>