force-app/main/default/objects/Contact/fields/Home_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Mobile_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Mobile</label>
    <type>Phone</type>
</CustomField>