force-app/main/default/objects/Contact/fields/Home_POBox__c.field-meta.xml
<CustomField>
    <fullName>Home_POBox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privat Postfach</label>
    <length>30</length>
    <type>Text</type>
</CustomField>