force-app/main/default/objects/Contact/fields/Home_Street__c.field-meta.xml
<CustomField>
    <fullName>Home_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privat Straße</label>
    <type>TextArea</type>
</CustomField>