force-app/main/default/objects/Contact/fields/Home_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Home_ZIP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privat PLZ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>