force-app/main/default/objects/Contact/fields/Hoofd_Maatschap__c.field-meta.xml
<CustomField>
    <fullName>Hoofd_Maatschap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>te selecteren indien deze contactpersoon Hoofd Maatschap is</description>
    <label>Hoofd Maatschap</label>
    <type>Checkbox</type>
</CustomField>