force-app/main/default/objects/Contact/fields/HR_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Manager</label>
    <length>25</length>
    <type>Text</type>
</CustomField>