force-app/main/default/objects/Contact/fields/HR_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Manager ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>