force-app/main/default/objects/Contact/fields/Inactiv__c.field-meta.xml
<CustomField>
    <fullName>Inactiv__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wenn aktiviert, dann handelt es sich um einen inaktiven Kontakt</description>
    <inlineHelpText>Activate only, if contact person has retired or died.</inlineHelpText>
    <label>Contact inactive</label>
    <type>Checkbox</type>
</CustomField>