force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this contact is inactive</description>
    <inlineHelpText>Check the box to Indicate that this contact is no longer an active contact</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>