force-app/main/default/objects/Contact/fields/InactiveSAPBW__c.field-meta.xml
<CustomField>
    <fullName>InactiveSAPBW__c</fullName>
    <formula>If(Inactive__c==True,&apos;I&apos;,&apos;A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InactiveSAPBW</label>
    <type>Text</type>
</CustomField>