force-app/main/default/objects/Contact/fields/Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquiry Date</label>
    <type>DateTime</type>
</CustomField>