force-app/main/default/objects/Contact/fields/InternalAddress__c.field-meta.xml
<CustomField>
    <fullName>InternalAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Korrespondenzaddresse Zusatz /Correspondence Address additional</inlineHelpText>
    <label>Interne Adresse</label>
    <length>200</length>
    <type>Text</type>
</CustomField>