force-app/main/default/objects/Contact/fields/Inventory_Audits__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Audits__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>General audit updates</inlineHelpText>
    <label>Inventory Audits</label>
    <type>Checkbox</type>
</CustomField>