force-app/main/default/objects/Contact/fields/Inventory_Help_Requests__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Help_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Request from territory to other territories for inventory help.</inlineHelpText>
    <label>Inventory Help Requests</label>
    <type>Checkbox</type>
</CustomField>