force-app/main/default/objects/Contact/fields/Inventory_Management__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>General communication for anything related to DI management</inlineHelpText>
    <label>Inventory Management</label>
    <type>Checkbox</type>
</CustomField>