force-app/main/default/objects/Contact/fields/Is_Reported__c.field-meta.xml
<CustomField>
    <fullName>Is_Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if contact is already sent in report</description>
    <label>Is Reported</label>
    <type>Checkbox</type>
</CustomField>