force-app/main/default/objects/Contact/fields/IsCreatedFromLead__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreatedFromLead</label>
    <type>Checkbox</type>
</CustomField>