force-app/main/default/objects/Contact/fields/ISR_Name__c.field-meta.xml
<CustomField>
    <fullName>ISR_Name__c</fullName>
    <formula>Account.ISR_Name__r.FirstName+&apos; &apos;+ Account.ISR_Name__r.LastName</formula>
    <label>ISR Name</label>
    <type>Text</type>
</CustomField>