force-app/main/default/objects/Contact/fields/Item_Master_Updates__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Item Clashes, New Item Numbers, Out of scope products</inlineHelpText>
    <label>Item Master Updates</label>
    <type>Checkbox</type>
</CustomField>