force-app/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>ACNP</fullName>
            </value>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>APNP</fullName>
            </value>
            <value>
                <fullName>ARNP</fullName>
            </value>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>CMA</fullName>
            </value>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>CNOR</fullName>
            </value>
            <value>
                <fullName>CNP</fullName>
            </value>
            <value>
                <fullName>CRCST</fullName>
            </value>
            <value>
                <fullName>CRNA</fullName>
            </value>
            <value>
                <fullName>CRNP</fullName>
            </value>
            <value>
                <fullName>CRNFA</fullName>
            </value>
            <value>
                <fullName>CRSA</fullName>
            </value>
            <value>
                <fullName>CRST</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>CSFA</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DMD</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>EMT</fullName>
            </value>
            <value>
                <fullName>FNPC</fullName>
            </value>
            <value>
                <fullName>FNP</fullName>
            </value>
            <value>
                <fullName>GN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>