force-app/main/default/objects/Contact/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Anaesthetist</fullName>
            </value>
            <value>
                <fullName>Assistant Surgeon</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Chief Surgeon</fullName>
            </value>
            <value>
                <fullName>Co. Chief Surgeon</fullName>
            </value>
            <value>
                <fullName>CSSD Manager</fullName>
            </value>
            <value>
                <fullName>CSSD Technician</fullName>
            </value>
            <value>
                <fullName>Deputy Chief Surgeon</fullName>
            </value>
            <value>
                <fullName>Deputy OP Lead</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Head of Administration</fullName>
            </value>
            <value>
                <fullName>Head of Laboratory</fullName>
            </value>
            <value>
                <fullName>Head of Pharmacy</fullName>
            </value>
            <value>
                <fullName>Head of Purchasing</fullName>
            </value>
            <value>
                <fullName>Hospital Hygienist</fullName>
            </value>
            <value>
                <fullName>Leading Senior Surgeon</fullName>
            </value>
            <value>
                <fullName>Leading Surgeon</fullName>
            </value>
            <value>
                <fullName>Medical Director</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>OP Lead</fullName>
            </value>
            <value>
                <fullName>OP Manager</fullName>
            </value>
            <value>
                <fullName>OP Nurse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Physiotherapist</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Purchaser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>