force-app/main/default/objects/Contact/fields/Kategorie__c.field-meta.xml
<CustomField>
    <fullName>Kategorie__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPdate</fullName>
            </value>
            <value>
                <fullName>UPdate3</fullName>
            </value>
            <value>
                <fullName>UPdate6</fullName>
            </value>
            <value>
                <fullName>Christmas Card</fullName>
            </value>
            <value>
                <fullName>Christmas Card personal</fullName>
            </value>
            <value>
                <fullName>Price List PDF</fullName>
            </value>
            <value>
                <fullName>Price List XL</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Encoding hints</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>PMI</fullName>
            </value>
            <value>
                <fullName>CMF &amp; Thoracic</fullName>
            </value>
            <value>
                <fullName>DKOU Dinner</fullName>
            </value>
            <value>
                <fullName>BIKE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>