force-app/main/default/objects/Contact/fields/Korresp_Name_1_AT__c.field-meta.xml
<CustomField>
    <fullName>Korresp_Name_1_AT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Korresp. Name 1 AT c/o</label>
    <length>100</length>
    <type>Text</type>
</CustomField>