force-app/main/default/objects/Contact/fields/KPI_Access__c.field-meta.xml
<CustomField>
    <fullName>KPI_Access__c</fullName>
    <label>KPI Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YOY</fullName>
            </value>
            <value>
                <fullName>STP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>