force-app/main/default/objects/Contact/fields/Leadership_Team_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Team_1_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Leadership Team - 1 Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>