force-app/main/default/objects/Contact/fields/Legacy_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Company_Code__c</fullName>
    <inlineHelpText>Z: Zimmer
B: Biomet
ZB: Zimmer Biomet</inlineHelpText>
    <label>Legacy Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>ZB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>