force-app/main/default/objects/Contact/fields/Letter_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Letter_Salutation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter Salutation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>