force-app/main/default/objects/Contact/fields/LMS_Biologics__c.field-meta.xml
<CustomField>
    <fullName>LMS_Biologics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biologics</label>
    <type>Checkbox</type>
</CustomField>