force-app/main/default/objects/Contact/fields/LMS_Bone_Healing__c.field-meta.xml
<CustomField>
    <fullName>LMS_Bone_Healing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bone Healing</label>
    <type>Checkbox</type>
</CustomField>