force-app/main/default/objects/Contact/fields/LMS_Dental__c.field-meta.xml
<CustomField>
    <fullName>LMS_Dental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dental</label>
    <type>Checkbox</type>
</CustomField>