force-app/main/default/objects/Contact/fields/LMS_Extremities__c.field-meta.xml
<CustomField>
    <fullName>LMS_Extremities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extremities</label>
    <type>Checkbox</type>
</CustomField>