force-app/main/default/objects/Contact/fields/LMS_Hip__c.field-meta.xml
<CustomField>
    <fullName>LMS_Hip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hip</label>
    <type>Checkbox</type>
</CustomField>