force-app/main/default/objects/Contact/fields/LMS_Knee__c.field-meta.xml
<CustomField>
    <fullName>LMS_Knee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knee</label>
    <type>Checkbox</type>
</CustomField>