force-app/main/default/objects/Contact/fields/LMS_Required__c.field-meta.xml
<CustomField>
    <fullName>LMS_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMS Required</label>
    <type>Checkbox</type>
</CustomField>