force-app/main/default/objects/Contact/fields/LMS_Spine__c.field-meta.xml
<CustomField>
    <fullName>LMS_Spine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spine</label>
    <type>Checkbox</type>
</CustomField>