force-app/main/default/objects/Contact/fields/LMS_Sports_Medicine__c.field-meta.xml
<CustomField>
    <fullName>LMS_Sports_Medicine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sports Medicine</label>
    <type>Checkbox</type>
</CustomField>