force-app/main/default/objects/Contact/fields/LMS_Surgical__c.field-meta.xml
<CustomField>
    <fullName>LMS_Surgical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surgical</label>
    <type>Checkbox</type>
</CustomField>