force-app/main/default/objects/Contact/fields/LMS_TMT__c.field-meta.xml
<CustomField>
    <fullName>LMS_TMT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMT</label>
    <type>Checkbox</type>
</CustomField>