force-app/main/default/objects/Contact/fields/LMS_Trauma__c.field-meta.xml
<CustomField>
    <fullName>LMS_Trauma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trauma</label>
    <type>Checkbox</type>
</CustomField>