force-app/main/default/objects/Contact/fields/Loaner_Status__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Communication of stock transfers between corresponding backend warehouses in XA</inlineHelpText>
    <label>Loaner Status</label>
    <type>Checkbox</type>
</CustomField>