force-app/main/default/objects/Contact/fields/MailingPOBox__c.field-meta.xml
<CustomField>
    <fullName>MailingPOBox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postanschrift Postfach</label>
    <length>30</length>
    <type>Text</type>
</CustomField>