force-app/main/default/objects/Contact/fields/Marketing_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Qualified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing Qualified Date</label>
    <type>DateTime</type>
</CustomField>