force-app/main/default/objects/Contact/fields/Marking_NOVO_Modified__c.field-meta.xml
<CustomField>
    <fullName>Marking_NOVO_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marking NOVO Modified</label>
    <type>Checkbox</type>
</CustomField>