force-app/main/default/objects/Contact/fields/Massachusetts_Licence__c.field-meta.xml
<CustomField>
    <fullName>Massachusetts_Licence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Special Licence Reference Number for State of Massachusetts</inlineHelpText>
    <label>Massachusetts Licence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>